# thinking-hats-ai

./: .gitignore  README.md  pyproject.toml
.cache/41/: cache.db-shm
.github/workflows/: python-publish.yml
src/: api_handler.py
src/thinking_hats_ai/: __init__.py  brainstorming_session.py
src/thinking_hats_ai/hats/: black.py  blue.py  green.py  hats.py  red.py  white.py  yellow.py
src/thinking_hats_ai/prompting_techniques/: base_technique.py  chain_of_thought.py  chain_of_verification.py  chaining.py  contrastive_prompting.py  emotion_prompt.py  few_shot.py  multi_agent.py  persona_pattern.py  re_act.py  system_2_attention.py  take_a_step_back.py  technique.py  zero_shot_cot.py
src/thinking_hats_ai/tools/: black_hat.py  blue_hat.py  green_hat.py  red_hat.py  tools.py  white_hat.py  yellow_hat.py
src/thinking_hats_ai/utils/: api_handler.py  brainstorming_input.py  logger.py  string_utils.py
