[project]
name = "thinking-hats-ai"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marc Timothy Huber", email = "marctimothy.huber@uzh.ch" }
]
maintainers = [
    { name = "Timon Derboven", email = "timon.derboven@uzh.ch" },
    { name = "Leon Roberto Braga", email = "leonroberto.braga@uzh.ch" }
]
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.20",
]

[project.scripts]
thinking-hats-ai = "thinking_hats_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79 
target-version = "py39" 

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ARG"]
fixable = ["ALL"]
exclude = ["venv", "migrations", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 
line-ending = "lf"
