[project]
name = "thinking-hats-ai"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Three Thinking Hats" }
]
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.20",
    "langchain-openai",
    "langchain-community",
    "urllib3<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
indent-width = 4 
target-version = "py39" 

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
exclude = ["venv", "migrations", "tests"]
ignore = ["E203", "E501"]
flake8-implicit-str-concat.allow-multiline = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 
line-ending = "lf"
